--- a/Blink.vcxproj.filters
+++ b/Blink.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClInclude Include="YssBtn.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Heater.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="YssBtn.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Heater.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
