--- a/Blink.vcxproj
+++ b/Blink.vcxproj
@@ -85,11 +85,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Heater.h" />
+    <ClInclude Include="kran.h" />
     <ClInclude Include="YssBtn.h" />
     <ClInclude Include="__vm\.Blink.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Heater.cpp" />
+    <ClCompile Include="kran.cpp" />
     <ClCompile Include="YssBtn.cpp" />
   </ItemGroup>
   <PropertyGroup>
