--- a/Blink.vcxproj
+++ b/Blink.vcxproj
@@ -66,10 +66,10 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\Blink;C:\Users\a0804\Documents\Arduino\libraries\OLED_I2C;$(ProjectDir)..\..\Arduino\libraries;C:\Users\a0804\Documents\Arduino\libraries;$(ProjectDir)..\..\Arduino\hardware\arduino\avr\libraries;$(ProjectDir)..\..\Arduino\hardware\arduino\avr\cores\arduino;$(ProjectDir)..\..\Arduino\hardware\arduino\avr\variants\standard;$(ProjectDir)..\..\Arduino\hardware\tools\avr\avr\include\;$(ProjectDir)..\..\Arduino\hardware\tools\avr\avr\include\avr\;$(ProjectDir)..\..\Arduino\hardware\tools\avr\lib\gcc\avr\4.8.1\include;$(ProjectDir)..\..\Arduino\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\Arduino\hardware\tools\avr\lib\gcc\avr\4.9.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\Blink;$(ProjectDir)..\..\Arduino\hardware\arduino\avr\libraries\EEPROM\src;C:\Users\a0804\Documents\Arduino\libraries\OLED_I2C;$(ProjectDir)..\..\Arduino\libraries;C:\Users\a0804\Documents\Arduino\libraries;$(ProjectDir)..\..\Arduino\hardware\arduino\avr\libraries;$(ProjectDir)..\..\Arduino\hardware\arduino\avr\cores\arduino;$(ProjectDir)..\..\Arduino\hardware\arduino\avr\variants\standard;$(ProjectDir)..\..\Arduino\hardware\tools\avr\avr\include\;$(ProjectDir)..\..\Arduino\hardware\tools\avr\avr\include\avr\;$(ProjectDir)..\..\Arduino\hardware\tools\avr\lib\gcc\avr\4.8.1\include;$(ProjectDir)..\..\Arduino\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\Arduino\hardware\tools\avr\lib\gcc\avr\4.9.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>$(ProjectDir)__vm\.Blink.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>false</IgnoreStandardIncludePath>
-      <PreprocessorDefinitions>__AVR_ATmega328p__;__AVR_ATmega328P__;F_CPU=16000000L;ARDUINO=10805;ARDUINO_AVR_UNO;ARDUINO_ARCH_AVR;__cplusplus=201103L;_VMICRO_INTELLISENSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__AVR_ATmega328p__;__AVR_ATmega328P__;_VMDEBUG=1;F_CPU=16000000L;ARDUINO=10805;ARDUINO_AVR_UNO;ARDUINO_ARCH_AVR;__cplusplus=201103L;_VMICRO_INTELLISENSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -85,13 +85,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Heater.h" />
-    <ClInclude Include="kran.h" />
+    <ClInclude Include="Kran.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="YssBtn.h" />
     <ClInclude Include="__vm\.Blink.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Heater.cpp" />
-    <ClCompile Include="kran.cpp" />
+    <ClCompile Include="Kran.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="YssBtn.cpp" />
   </ItemGroup>
   <PropertyGroup>
