--- a/Blink.vcxproj
+++ b/Blink.vcxproj
@@ -87,6 +87,8 @@
     <ClInclude Include="Heater.h" />
     <ClInclude Include="Kran.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="Suvid.h" />
+    <ClInclude Include="Termometer.h" />
     <ClInclude Include="YssBtn.h" />
     <ClInclude Include="__vm\.Blink.vsarduino.h" />
   </ItemGroup>
@@ -94,6 +96,8 @@
     <ClCompile Include="Heater.cpp" />
     <ClCompile Include="Kran.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Suvid.cpp" />
+    <ClCompile Include="Termometer.cpp" />
     <ClCompile Include="YssBtn.cpp" />
   </ItemGroup>
   <PropertyGroup>
