--- a/Blink.vcxproj
+++ b/Blink.vcxproj
@@ -84,20 +84,24 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Discill.h" />
     <ClInclude Include="Heater.h" />
     <ClInclude Include="Kran.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Suvid.h" />
     <ClInclude Include="Termometer.h" />
+    <ClInclude Include="Uroven.h" />
     <ClInclude Include="YssBtn.h" />
     <ClInclude Include="__vm\.Blink.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Discill.cpp" />
     <ClCompile Include="Heater.cpp" />
     <ClCompile Include="Kran.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Suvid.cpp" />
     <ClCompile Include="Termometer.cpp" />
+    <ClCompile Include="Uroven.cpp" />
     <ClCompile Include="YssBtn.cpp" />
   </ItemGroup>
   <PropertyGroup>
