--- a/Blink.vcxproj.filters
+++ b/Blink.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="Termometer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Discill.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Uroven.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="YssBtn.cpp">
@@ -57,6 +63,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Termometer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Discill.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Uroven.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
