--- a/Blink.vcxproj.filters
+++ b/Blink.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="DallasTerm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Beeper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="YssBtn.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DallasTerm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Beeper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
